# yourmemory

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  main.py  memory_mcp.py  pyproject.toml  requirements.txt  server.json
.github/workflows/: docker-publish.yml
scripts/: setup_db.sh
src/: app.py
src/db/: connection.py  migrate.py  schema.sql  sqlite_schema.sql
src/jobs/: decay_job.py
src/routes/: agents.py  memories.py  retrieve.py
src/services/: api_keys.py  decay.py  embed.py  extract.py  resolve.py  retrieve.py
